--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,19 @@
 # Basic Information 
-title: Song Chen
-position: Ph.D. Candidate
-affiliation: Université Paris-Saclay
-subaffiliation: Spin-Ion Technologies 
-affiliation_link: https://www.universite-paris-saclay.fr/
-subaffiliation_link: https://www.spin-ion.com/
+title: Haocheng Yang
+position: Undergraduate
+affiliation: Ocean University of China
+subaffiliation: College of Oceanic and Atmospheric Sciences
+affiliation_link: http://www.ouc.edu.cn/main.htm
+subaffiliation_link: http://eweb.ouc.edu.cn/coasouc/
 affiliation_logo: ./assets/img/spinion.svg
-email: song.chen (at) spin-ion.com
-email2: song.chen (at) universite-paris-saclay.fr
-address: 10 Bd Thomas Gobert, 91120 Palaiseau
-address_link: https://www.google.fr/maps/place/Spin-Ion+Technologies/@48.7124352,2.194429,17z/data=!3m2!4b1!5s0x47e678bdc29075f7:0xbce23cefe16f4791!4m6!3m5!1s0x47e678bdc3c95555:0xe09ceff0db3725ab!8m2!3d48.7124317!4d2.1970093!16s%2Fg%2F11r4m02q4g?entry=ttu
-
+email: yanghaocheng@stu.ouc.edu.cn
+email2: 929614020@qq.com
+address: No.238 Songling Road, Laoshan District, Qingdao City, Shandong Province
+address_link: http://eweb.ouc.edu.cn/964/list.htm
 # Search Engine Optimization (SEO)
-keywords: song chen, chen song, songchen, chensong
+keywords: haocheng yang, yang haocheng, yanghaocheng, haochengyang
 canonical: https://minimal-light-theme.yliu.me/
-description: Song Chen is a Ph.D. canditate at Spin-Ion Technologies and Université Paris-Saclay. His research lies at using magneto-ionics to develop new concepts for magnetic data storage, spintronic devices and magnonics, always with the aim of improving energy efficiency with respect to currently available technologies - with a special focus on the boosting magneto-ionic effect using ion irradiation & ion implantation.
+description: Haocheng Yang is an Undergraduate at College of Oceanic and Atmospheric Sciences of Ocean University of China. His research lies at extreme events, specifically invovled in Marine Heatwaves and Warm Blobs - He is also interested in oceanic and atmospheric dynamics
 
 # The option is used to enable the Johns Hopkins template.
 enable_hopkins_logo: false
@@ -23,12 +22,12 @@ enable_hopkins_logo: false
 enable_last_update: false
 
 # Links
-google_scholar: https://scholar.google.com/citations?user=sf-0AGoAAAAJ&hl=de
+google_scholar: 
 cv_link: 
-github_link: https://github.com/song-chen1/
-linkedin: https://www.linkedin.com/in/song-chen-3449b9278/
+github_link: 
+linkedin: 
 twitter: 
-researchgate: https://www.researchgate.net/profile/Song-Chen-60
+researchgate: https://www.researchgate.net/profile/Haocheng-Yang-6
 
 # Images 
 avatar: ./assets/img/avatar.jpg
@@ -45,11 +44,11 @@ enable_footnote: false
 # Analytics
 # Please remove the following lines about analytics services if you fork my project. 
 # Otherwise, the analytics information of your website will be recorded to my ClustrMaps accounts.
-clustrmaps_id: LTWZqBYr9s2OPIQ_fArLjKld7T2K1HlQjSmT1yWWXlE
+# clustrmaps_id: LTWZqBYr9s2OPIQ_fArLjKld7T2K1HlQjSmT1yWWXlE
 
 # Google Analytics ID
 # Please remove this if you don't use Google Analytics
-google_analytics: G-SDFXL7GGYS
+# google_analytics: G-SDFXL7GGYS
 
 # Use this project as a remote theme for GitHub Pages
 # See the guide here: https://docs.github.com/en/pages/setting-up-a-github-pages-site-with-jekyll/adding-a-theme-to-your-github-pages-site-using-jekyll
