--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ enable_last_update: false
 
 # Links
 google_scholar: https://scholar.google.com/citations?user=sf-0AGoAAAAJ&hl=de
-cv_link: 
+cv_link: https://s30.aconvert.com/convert/p3r68-cdx67/axovh-qc4ni.html
 github_link: https://github.com/song-chen1/
 linkedin: https://www.linkedin.com/in/song-chen-3449b9278/
 twitter: 
